# practicode

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Makefile  README.md  SECURITY.md  package.json  pyproject.toml
.codex/: problem-state.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  lesson.yml  proposal.yml
.github/workflows/: ci.yml  release.yml
assets/i18n/: en.json  es.json  ja.json  ko.json  zh.json
assets/lessons/: README.md  review-manifest.json
assets/lessons/java/: course.json  en.json  es.json  ja.json  ko.json  zh.json
assets/lessons/python/: course.json  en.json  es.json  ja.json  ko.json  zh.json
assets/lessons/rust/: course.json  en.json  es.json  ja.json  ko.json  zh.json
assets/lessons/typescript/: course.json  en.json  es.json  ja.json  ko.json  zh.json
assets/typescript/: node-shim.d.ts
docs/: ARCHITECTURE.md  COMMANDS.md  CONTRIBUTING.md  GROWTH.md  MAINTAINING.md  problem-authoring-notes.md
docs/superpowers/plans/: 2026-07-10-global-data-home.md
docs/superpowers/specs/: 2026-07-10-global-data-home-design.md
problems/: INDEX.md
problems/001-running-sum/: README.md  solution.py  test_solution.py
scripts/: check-lessons.js  npm-postinstall.js  release.sh
src/: ai.rs  core.rs  lib.rs  main.rs  process.rs  text.rs  tui.rs  update.rs
src/codecode/: app.py  core.py
src/core/: bank.rs  judge.rs  learning.rs  model.rs  problem_files.rs  progress.rs  render.rs  state.rs  syntax.rs
src/tui/: actions.rs  command_handlers.rs  command_input.rs  commands.rs  doctor.rs  editor.rs  events.rs  learning.rs  problem_list.rs  problem_view.rs  settings_panel.rs  status.rs  tasks.rs  view.rs
tests/: ai.rs  cli.rs  core.rs  i18n.rs  launcher.test.js  lesson_quality.rs  test_app.py  test_core.py  text.rs  tui.rs  update.rs
tests/common/: mod.rs
tests/fixtures/lesson-quality/: java.json  python.json  rust.json  typescript.json
