[package]
name = "codecode"
version = "0.1.0"
edition = "2024"
description = "Local-first coding-test practice in a Rust terminal UI."
readme = "README.md"
keywords = ["algorithms", "codex", "coding-practice", "competitive-programming", "tui"]
categories = ["command-line-utilities", "development-tools", "text-editors"]

[dependencies]
anyhow = "1"
crossterm = "0.29"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-width = "0.2"
wait-timeout = "0.2"
