[package]
name = "practicode"
version = "0.1.7"
edition = "2024"
description = "Local-first coding-test practice in a Rust terminal UI with optional AI help."
readme = "README.md"
license = "MIT"
repository = "https://github.com/baba9811/practicode"
homepage = "https://github.com/baba9811/practicode"
keywords = ["algorithms", "ai", "coding-practice", "competitive", "tui"]
categories = ["command-line-utilities", "development-tools", "text-editors"]

[dependencies]
anyhow = "1"
crossterm = "0.29"
ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-width = "0.2"
wait-timeout = "0.2"
