[package]
name = "practicode"
version = "0.2.3"
edition = "2024"
description = "Offline-first programming language lessons and coding practice in a Rust terminal UI."
readme = "README.md"
license = "MIT"
repository = "https://github.com/baba9811/practicode"
homepage = "https://github.com/baba9811/practicode"
keywords = ["learning", "coding-practice", "programming", "terminal", "tui"]
categories = ["command-line-utilities", "development-tools", "text-editors"]
include = [
    "/src/**",
    "/assets/**",
    "/docs/*.md",
    "/Cargo.lock",
    "/LICENSE",
    "/README.md",
    "/SECURITY.md",
    "/THIRD_PARTY_LICENSES.md",
]

[dependencies]
anyhow = "1"
crossterm = "0.29"
ratatui = { version = "0.30", default-features = false, features = ["crossterm", "unstable-rendered-line-info"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-width = "0.2"
wait-timeout = "0.2"
